Fixed no-wrap behavior for song-list songs

--- a/source/components/song-list/component.scss
+++ b/source/components/song-list/component.scss
@@ -5,7 +5,7 @@ song-list {
     .md-list-item-text {
       padding: 10px 0 0 !important;
 
-      h3, h4 {
+      h3, h4, p {
         @extend .nowrap;
       }
     }
